# Telly

./: .SRCINFO  LICENSE  PKGBUILD  README.md  pyproject.toml  teevee  telly
lib/: config.sh  dunst.sh  launcher.sh  options.sh  timer.sh  utils.sh
src/telly/: cli.py  engine.py  rofi.py  state.py
src/telly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
