[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telly"
version = "0.1.0"
description = "Single-button cyclic launcher with rofi backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
mytool = "telly.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
